# yukawayuami

./: .gitignore  README.md  SPEC.md  chara.md  generate_backgrounds.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
color-tiles-romance/: .eslintrc.json  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  scenario_texts.txt  tsconfig.json  vite.config.ts
color-tiles-romance/.github/workflows/: deploy.yml
color-tiles-romance/public/data/: bgm_map.json
color-tiles-romance/scenario_drafts/: ch00.txt  ch01.txt  ch02.txt  ch03.txt  ch04.txt  ch05.txt
color-tiles-romance/src/: main.ts  style.css
color-tiles-romance/src/audio/: BgmManager.ts  SeManager.ts
color-tiles-romance/src/core/: LineChecker.ts  PuzzleEngine.ts  SoundEngine.ts  StageGenerator.ts  StageValidator.ts  TimerSystem.ts
color-tiles-romance/tests/: GimmickStages.test.ts  LineChecker.test.ts  NewStages.test.ts  ProgressStore.test.ts  PuzzleEngine.test.ts  SaveStore.test.ts  StageValidator.test.ts  TimerSystem.test.ts
docs/: index.html  qa-checklist.md  session-report-2.md  session-report-3.md  session-report-4.md  session-report-5.md  session-report.md
examples/: quickstart.py  streaming.py
kiohp_sample/: index.html
scripts/: download_wheels.sh
vertex-tool/: README.md
vertex-tool/claude_vertex_tool/: __init__.py  cli.py  client.py
vertex-tool/examples/: notebook_quickstart.ipynb
vertex-tool/scripts/: install.sh  verify.sh
vertex-tool/wheels/: anthropic-0.100.0-py3-none-any.whl
wheels/: claude_vertex_tool-0.1.0-py3-none-any.whl
(+151 files in other folders)
